disabled hi 5 until country is determined

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id='status' style='display:none'>Start your High 5!</div>
-    <button onclick="makeHifi()">Make High 5</button>
+    <button id='hifi' disabled onclick='makeHifi()'>Make High 5</button>
 </body>
 
 </html>
